# ai-dm-rpg-game

./: .coverage  .env  AGENTS.md  CHECKPOINT.md  DESIGN.md  EXPERIENCE_REPORT.md  PROJECT_STATE.md  auto_play.py  experience_report_20260412.md  experience_test.py  fresh_playtest.py  fresh_playtest_0412.json  fresh_playtest_report_0412.md  interactive_master.py  playtest_result.txt  playtest_runner.py  playtest_temp.py  playtest_tiyanguan.py  playtest_v2.py  playtest_v3.py  pyproject.toml  run.py  run_e2e_tiyanguan.py  run_exp.bat  run_playtest.bat  run_playtest.py  simple_test.py  test_combat_mode.py  test_e2e_quick.py  test_gm.py  test_gm_basic.py  test_gm_quick.py  tiyanguan_0412_2015.py  tiyanguan_1100_data.json  tiyanguan_cron_1034_data.json  tiyanguan_e2e_1341.py  tiyanguan_e2e_full.py  体验报告_20260412.md
content/: BOUNDARIES.md  CANON.md  CONSTITUTION.md  CONTENT_TIER.md  PACING_CONTROL.md  SCENE_GEN.md
core/: ARCHITECTURE.md  BEAT_SYSTEM.md  MEMORY.md
docs/: ARCHITECTURE.md  LAST_REPORT_MTIME.txt  PLAYER_GUIDE.md  ROOT_CAUSE_ANALYSIS.md  TECH_PROPOSAL.md
gameplay/: COMBAT.md  INTERACTION_BOUNDARY.md  MAP_DESIGN.md
sandbox/: analyze_gaps.py  analyze_gaps2.py  analyze_gaps3.py  check_syntax.py  fallback_data.py  find_multiline.py  fix_game_master.py  fix_line620.py  fix_multiline.py  fix_scene_agent.py  fix_scene_agent2.py  fix_strings.py  fix_strings2.py  send_report.py  send_tiyanguan_1840.py  send_tiyanguan_1945.py  test_imports.py  tiyanguan_1840.py  tiyanguan_auto.py  tiyanguan_fast_0412.py  tiyanguan_playtest_0412.py
saves/: save_0.json
src/: hooks.py  (+18 more)
(+265 files in other folders)
