[project]
name = "ai-dm-rpg"
version = "0.1.0"
description = "AI Dungeon Master - A multi-agent RPG system"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "d20>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
